retrieveEverything/force-app/main/default/objects/Employee__c/fields/Father_name__c.field-meta.xml
<CustomField>
    <fullName>Father_name__c</fullName>
    <label>Father name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>