retrieveEverything/force-app/main/default/objects/Employee__c/fields/Graduation__c.field-meta.xml
<CustomField>
    <fullName>Graduation__c</fullName>
    <label>Graduation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BSc</fullName>
            </value>
            <value>
                <fullName>BBA</fullName>
            </value>
            <value>
                <fullName>BCOM</fullName>
            </value>
            <value>
                <fullName>BA</fullName>
            </value>
            <value>
                <fullName>BE</fullName>
            </value>
            <value>
                <fullName>BTech</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>