retrieveEverything/force-app/main/default/objects/Employee__c/fields/Graduation_Score__c.field-meta.xml
<CustomField>
    <fullName>Graduation_Score__c</fullName>
    <label>Graduation Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>