retrieveEverything/force-app/main/default/objects/Employee__c/fields/Higher_Secondary__c.field-meta.xml
<CustomField>
    <fullName>Higher_Secondary__c</fullName>
    <label>Higher Secondary %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>