retrieveEverything/force-app/main/default/objects/Employee__c/fields/Password__c.field-meta.xml
<CustomField>
    <fullName>Password__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Password</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>