retrieveEverything/force-app/main/default/objects/Employee__c/fields/Post_Graduation__c.field-meta.xml
<CustomField>
    <fullName>Post_Graduation__c</fullName>
    <label>Post Graduation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MCom</fullName>
            </value>
            <value>
                <fullName>MSc</fullName>
            </value>
            <value>
                <fullName>MCA</fullName>
            </value>
            <value>
                <fullName>ME</fullName>
            </value>
            <value>
                <fullName>MTech</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>